# sro

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  flake.nix  go.mod  go.sum  main.go
.sro/: config.sro  main.sro  par.sro  seq.sro
ast/: ast.go
cmd/: par.go  root.go  seq.go  sync.go  util.go
completions/: sro.bash  sro.fish
config/: config.go
examples/: build.sro  main.sro  new-schema.sro  other_config.sro  pr.sro  schema.sro  simple.sro  sro.toml  test.sro
examples/example/: work.sro
internal/config/: config.go  config_test.go  cycle.go  merge.go  merge_test.go  parse.go  resolve.go  resolve_test.go  types.go  validate.go  validate_test.go
internal/dsl/ast/: decl.go  expr.go  fn.go  node.go  seq.go
internal/runner/: context.go  exec.go  exec_test.go  helpers_test.go  par.go  par_test.go  runner.go  runner_test.go  seq.go  seq_test.go
internal/sync/: sync.go  sync_test.go
internal/tui/: colors.go  model.go  render.go  spinner.go  tui.go
lexer/: lexer.go  lexer_test.go
old-go/: go.mod  main.go
old-go/cmd/: par.go  validate.go
old-go/completions/: sro.zsh
parser/: parser.go  parser_test.go
runner/: runner.go  runner_test.go
src/: ast.rs  cli.rs  config.rs  lexer.rs  main.rs  parser.rs  runner.rs  sync.rs  token.rs
src/cli/: mod.rs  sync.rs  validate.rs
src/config/: error.rs  merge.rs  mod.rs  types.rs  validation.rs
src/dsl/: ast.rs  lexer.rs  token.rs
src/runner/: context.rs  mod.rs  resolver.rs
src/sync/: mod.rs
src/tui/: mod.rs  render.rs
sync/: sync.go  sync_test.go
(+60 files in other folders)
