[package]
name = "sro"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Nguyen Bao Truong <infraflakes@proton.me>"]

[dependencies]
chumsky = "0.9.3"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "5.0.1"
miette = "7.6.0"
ratatui = "0.30.0"
thiserror = "2.0.18"
tokio = "1.52.2"
