[package]
name = "sro"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Nguyen Bao Truong <infraflakes@proton.me>"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
dirs = "5.0"
miette = { version = "7.6", features = ["fancy"] }
ratatui = "0.26"
thiserror = "1.0"
tokio = { version = "1.52", features = ["full"] }

[dependencies.crossterm]
version = "0.28"
default-features = false
features = ["event-stream"]
